[workspace]
members = [
    "passkey",
    "passkey-authenticator",
    "passkey-client",
    "passkey-transports",
    "passkey-types",
    "public-suffix",
]

[workspace.package]
authors = ["1Password"]
repository = "https://github.com/1Password/passkey-rs"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["passkey", "webauthn", "fido2", "passwordless", "ctap"]
categories = ["authentication"]
