[workspace]
members = [
  "passkey",
  "passkey-authenticator",
  "passkey-client",
  "passkey-transports",
  "passkey-types",
  "public-suffix",
]
resolver = "2"

[workspace.package]
authors = ["1Password"]
categories = ["authentication"]
edition = "2024"
keywords = ["ctap", "fido2", "passkey", "passwordless", "webauthn"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/1Password/passkey-rs"
rust-version = "1.85.1"

[workspace.lints.rust]
missing_docs = "warn"
unused-qualifications = "deny"
unused_must_use = "forbid"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"

[workspace.lints.clippy]
as_conversions = "deny"
dbg_macro = "deny"
result_unit_err = "deny"
todo = "deny"
undocumented_unsafe_blocks = "deny"
unimplemented = "deny"
unused_async = "deny"
