[package]
name = "passkey-authenticator"
description = "A webauthn authenticator supporting passkeys."
include = ["src/", "../LICENSE-APACHE", "../LICENSE-MIT"]
readme = "README.md"
version.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
