[package]
authors.workspace = true
categories.workspace = true
description = "A webauthn authenticator supporting passkeys."
edition.workspace = true
include = ["../LICENSE-APACHE", "../LICENSE-MIT", "src/"]
keywords.workspace = true
license.workspace = true
name = "passkey-authenticator"
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version = "0.5.0"

[lints]
workspace = true

[features]
default = []
testable = ["dep:mockall", "passkey-types/testable"]
tokio = ["dep:tokio"]

[dependencies]
async-trait = "0.1"
coset = "0.3"
log = "0.4"
mockall = { version = "0.11", optional = true }
p256 = { version = "0.13", features = ["arithmetic", "jwk", "pem"] }
passkey-types = { path = "../passkey-types", version = "0.5" }
rand = "0.8"
tokio = { version = "1", features = ["sync"], optional = true }

[dev-dependencies]
generic-array = { version = "=0.14.7", default-features = false }
mockall = { version = "0.11" }
passkey-types = { path = "../passkey-types", version = "0.5", features = [
  "testable",
] }
signature = { version = "2", features = ["rand_core"] }
tokio = { version = "1", features = ["macros", "rt", "sync"] }
