[package]
name = "passkey-client"
version = "0.4.0"
description = "Webauthn client in Rust."
include = ["src/", "../LICENSE-APACHE", "../LICENSE-MIT"]
readme = "README.md"
authors.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[features]
tokio = ["dep:tokio"]
testable = ["dep:mockall"]
android-asset-validation = ["dep:nom"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
passkey-authenticator = { path = "../passkey-authenticator", version = "0.4" }
passkey-types = { path = "../passkey-types", version = "0.4" }
public-suffix = { path = "../public-suffix", version = "0.1" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ciborium = "0.2"
mockall = { version = "0.11", optional = true }
typeshare = "1"
idna = "0.5"
url = "2"
coset = "0.3"
tokio = { version = "1", features = ["sync"], optional = true }
nom = { version = "7", features = ["alloc"], optional = true }

[dev-dependencies]
coset = "0.3"
mockall = { version = "0.11" }
passkey-authenticator = { path = "../passkey-authenticator", version = "0.4", features = [
  "tokio",
  "testable",
] }
tokio = { version = "1", features = ["macros", "rt"] }
