[package]
authors.workspace = true
categories.workspace = true
description = "Webauthn client in Rust."
edition.workspace = true
include = ["../LICENSE-APACHE", "../LICENSE-MIT", "src/"]
keywords.workspace = true
license.workspace = true
name = "passkey-client"
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version = "0.5.0"

[lints]
workspace = true

[features]
android-asset-validation = ["dep:nom"]
testable = ["dep:mockall"]
tokio = ["dep:tokio"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ciborium = "0.2"
coset = { workspace = true }
idna = "1"
itertools = "0.14"
mockall = { version = "0.11", optional = true }
nom = { version = "7", features = ["alloc"], optional = true }
passkey-authenticator = { path = "../passkey-authenticator", version = "0.5" }
passkey-types = { path = "../passkey-types", version = "0.5" }
public-suffix = { path = "../public-suffix", version = "0.1" }
reqwest = { version = "0.12", default-features = false, optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync"], optional = true }
typeshare = "1"
url = "2"

[dev-dependencies]
coset = { workspace = true }
mockall = { version = "0.11" }
passkey-authenticator = { path = "../passkey-authenticator", version = "0.5", features = [
  "testable",
  "tokio",
] }
tokio = { version = "1", features = ["macros", "rt"] }
