[package]
name = "passkey-transports"
description = "A crate managing CTAP2 transport-specific bindings."
version = "0.1.0"
include = ["src/", "../LICENSE-APACHE", "../LICENSE-MIT"]
readme = "README.md"
authors.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]

[dev-dependencies]