[package]
authors.workspace = true
categories.workspace = true
description = "A crate managing CTAP2 transport-specific bindings."
edition.workspace = true
include = ["../LICENSE-APACHE", "../LICENSE-MIT", "src/"]
keywords.workspace = true
license.workspace = true
name = "passkey-transports"
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version = "0.1.0"


[lints]
workspace = true

[dependencies]

[dev-dependencies]
