[package]
name = "passkey-types"
description = "Rust type definitions for the webauthn and CTAP specifications"
include = ["src/", "../LICENSE-APACHE", "../LICENSE-MIT"]
readme = "README.md"
version = "0.1.1"
authors.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
serialize_bytes_as_base64_string = []

[dependencies]
bitflags = "1"
ciborium = "0.2"
data-encoding = "2"
indexmap = { version = "2", features = ["serde"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
sha2 = "0.10"
strum = { version = "0.24", features = ["derive"] }
typeshare = "1"
# TODO: investigate rolling our own IANA listings and COSE keys
coset = "0.3"

[dev-dependencies]
regex = "1.10"