[package]
name = "passkey-types"
description = "Rust type definitions for the webauthn and CTAP specifications"
include = ["src/", "../LICENSE-APACHE", "../LICENSE-MIT"]
readme = "README.md"
version = "0.2.0"
authors.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[features]
default = []
serialize_bytes_as_base64_string = []

[dependencies]
bitflags = "2"
ciborium = "0.2"
data-encoding = "2"
indexmap = { version = "2", features = ["serde"] }
hmac = "0.12"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
sha2 = "0.10"
strum = { version = "0.25", features = ["derive"] }
typeshare = "1"
zeroize = { version = "1", features = ["zeroize_derive"] }
# TODO: investigate rolling our own IANA listings and COSE keys
coset = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
