[package]
authors.workspace = true
categories.workspace = true
description = "Rust type definitions for the webauthn and CTAP specifications"
edition.workspace = true
include = ["../LICENSE-APACHE", "../LICENSE-MIT", "src/"]
keywords.workspace = true
license.workspace = true
name = "passkey-types"
readme = "README.md"
repository.workspace = true
version = "0.5.0"

[lints]
workspace = true

[features]
default = []
serialize_bytes_as_base64_string = []
testable = ["dep:p256"]

[dependencies]
bitflags = "2"
ciborium = "0.2"
data-encoding = "2"
hmac = "0.12"
indexmap = { version = "2", features = ["serde"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
sha2 = "0.10"
strum = { version = "0.25", features = ["derive"] }
typeshare = "1"
url = { version = "2", features = ["serde"] }
zeroize = { version = "1", features = ["zeroize_derive"] }
# TODO: investigate rolling our own IANA listings and COSE keys
coset = "0.3"
p256 = { version = "0.13", features = [
  "arithmetic",
  "jwk",
  "pem",
], optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
