[package]
name = "passkey"
version = "0.4.0"
description = "A one stop library to implement a passkey client and authenticator"
include = ["src/", "../LICENSE-APACHE", "../LICENSE-MIT"]
readme = "../README.md"
authors.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.cargo-udeps.ignore]
development = [
  "tokio-test",
] # Only used for async doctests. Cargo udeps can't check.:

[dependencies]
passkey-authenticator = { path = "../passkey-authenticator", version = "0.4" }
passkey-types = { path = "../passkey-types", version = "0.4" }
passkey-client = { path = "../passkey-client", version = "0.4" }
passkey-transports = { path = "../passkey-transports", version = "0.1" }

[dev-dependencies]
coset = "0.3"
url = "2"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
tokio-test = "0.4"
async-trait = "0.1"
passkey-client = { path = "../passkey-client", version = "0.4", features = [
  "tokio",
  "testable",
] }
passkey-authenticator = { path = "../passkey-authenticator", version = "0.4", features = [
  "tokio",
  "testable",
] }
