[package]
authors.workspace = true
categories.workspace = true
description = "A one stop library to implement a passkey client and authenticator"
edition.workspace = true
include = ["../LICENSE-APACHE", "../LICENSE-MIT", "src/"]
keywords.workspace = true
license.workspace = true
name = "passkey"
readme = "../README.md"
repository.workspace = true
rust-version.workspace = true
version = "0.5.0"

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.cargo-udeps.ignore]
development = [
  "tokio-test",
] # Only used for async doctests. Cargo udeps can't check.:

[dependencies]
passkey-authenticator = { path = "../passkey-authenticator", version = "0.5" }
passkey-client = { path = "../passkey-client", version = "0.5" }
passkey-transports = { path = "../passkey-transports", version = "0.1" }
passkey-types = { path = "../passkey-types", version = "0.5" }

[dev-dependencies]
async-trait = "0.1"
coset = { workspace = true }
passkey-authenticator = { path = "../passkey-authenticator", version = "0.5", features = [
  "testable",
  "tokio",
] }
passkey-client = { path = "../passkey-client", version = "0.5", features = [
  "testable",
  "tokio",
] }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
tokio-test = "0.4"
url = "2"
