[package]
authors.workspace = true
description = "Crate for efficient determination of eTLD+1 based on the Mozilla Public Suffix List."
edition.workspace = true
include = ["../LICENSE-APACHE", "../LICENSE-MIT", "src/"]
keywords = ["domain", "etld", "publicsuffix", "tld"]
license.workspace = true
name = "public-suffix"
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version = "0.1.3"

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["default_provider"]
default_provider = []

[dependencies]
